--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fixed 800px Height Iframe Wrapper</title>
+  <title>Iframe Wrapper with Fixed Height</title>
   <style>
     .iframe-container {
       -webkit-overflow-scrolling: touch;
       width: 360px;
-      height: 800px; /* Fixed height of 800px */
+      height: 800px; /* Fixed outer iframe height */
       overflow: hidden;
     }
     .iframe-container iframe {
       width: 100%;
-      height: 100%; /* Ensures iframe fills the container height */
+      height: 800px; /* Inner iframe height locked to 800px */
       border: none;
       overflow: hidden;
     }
@@ -22,11 +22,11 @@
 <body>
 
 <div class="iframe-container">
-  <iframe id="dynamicIframe" scrolling="yes" allowtransparency="true"></iframe>
+  <iframe id="dynamicIframe" scrolling="no" allowtransparency="true"></iframe>
 </div>
 
 <script>
-  // Retrieve the iframe URL from the query parameter
+  // Retrieve the URL for the iframe content from the query parameter
   function getIframeSrc() {
     const urlParams = new URLSearchParams(window.location.search);
     return urlParams.get('iframeUrl');
@@ -36,7 +36,19 @@
   const iframeSrc = getIframeSrc();
 
   if (iframeSrc) {
-    iframe.src = iframeSrc; // Set the iframe source
+    // Embed the content inside another fixed-height iframe
+    iframe.src = `data:text/html;charset=utf-8,
+    <html>
+      <head>
+        <style>
+          body { margin: 0; overflow: hidden; }
+          iframe { width: 100%; height: 800px; border: none; }
+        </style>
+      </head>
+      <body>
+        <iframe src='${iframeSrc}'></iframe>
+      </body>
+    </html>`;
   } else {
     console.error("No iframe URL provided in the query parameter.");
   }
