--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       width: 360px;
       height: 800px; /* Fixed outer iframe height */
       overflow: hidden;
+      background-color: red;
     }
     .iframe-container iframe {
       width: 100%;
