--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iframe Wrapper with Fixed Height</title>
+  <title>Isolated Iframe Wrapper</title>
   <style>
+    /* Container for the isolated iframe */
     .iframe-container {
       -webkit-overflow-scrolling: touch;
       width: 360px;
-      height: 800px; /* Fixed outer iframe height */
+      height: 800px; /* Fixed 800px height */
       overflow: hidden;
-      background-color: red;
     }
+    /* Styling for iframe */
     .iframe-container iframe {
       width: 100%;
-      height: 800px; /* Inner iframe height locked to 800px */
+      height: 100%; /* Matches container height */
       border: none;
       overflow: hidden;
     }
@@ -22,12 +23,18 @@
 </head>
 <body>
 
+<!-- Outer container, unaffected by iframe loading -->
+<div id="outer-container">
+  <p>Other content in the page goes here...</p>
+</div>
+
+<!-- Isolated iframe container -->
 <div class="iframe-container">
   <iframe id="dynamicIframe" scrolling="no" allowtransparency="true"></iframe>
 </div>
 
 <script>
-  // Retrieve the URL for the iframe content from the query parameter
+  // Function to retrieve the iframe URL from the query parameter
   function getIframeSrc() {
     const urlParams = new URLSearchParams(window.location.search);
     return urlParams.get('iframeUrl');
@@ -36,20 +43,9 @@
   const iframe = document.getElementById('dynamicIframe');
   const iframeSrc = getIframeSrc();
 
+  // Set the iframe source to the provided URL, ensuring isolation within its container
   if (iframeSrc) {
-    // Embed the content inside another fixed-height iframe
-    iframe.src = `data:text/html;charset=utf-8,
-    <html>
-      <head>
-        <style>
-          body { margin: 0; overflow: hidden; }
-          iframe { width: 100%; height: 800px; border: none; }
-        </style>
-      </head>
-      <body>
-        <iframe src='${iframeSrc}'></iframe>
-      </body>
-    </html>`;
+    iframe.src = iframeSrc;
   } else {
     console.error("No iframe URL provided in the query parameter.");
   }
