--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <style>
 
     .outer-container {
-      -webkit-overflow-scrolling: touch;
-      width: 360px;
-      height: 800px; /* Fixed 800px height */
-      overflow: hidden;
+      width: 100px;
+      height: 800px;
     }
 
     /* Container for the isolated iframe */
