--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
 <!-- Outer container, unaffected by iframe loading -->
-<div id="outer-container">
+<div class="outer-container">
   <p>Other content in the page goes here...</p>
 </div>
 
