--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iframe Wrapper with contentSize</title>
+  <title>Fixed 800px Iframe Wrapper</title>
   <style>
+    /* Fixed height container */
     .iframe-container {
       -webkit-overflow-scrolling: touch;
       width: 360px;
+      height: 800px; /* Enforcing fixed 800px height */
       overflow: hidden;
     }
+    /* Fixed height iframe */
     .iframe-container iframe {
       width: 100%;
+      height: 800px; /* Matching fixed height */
       border: none;
+      overflow: hidden;
     }
   </style>
 </head>
 <body>
 
-<div class="iframe-container" style="height:800px;" id="outerContainer">
+<div class="iframe-container">
   <iframe id="dynamicIframe" scrolling="no" allowtransparency="true"></iframe>
 </div>
 
 <script>
+  // Retrieve the iframe URL from the query parameter
   function getIframeSrc() {
     const urlParams = new URLSearchParams(window.location.search);
     return urlParams.get('iframeUrl');
@@ -33,18 +39,12 @@
 
   if (iframeSrc) {
     iframe.src = iframeSrc;
-    
-    // Set contentSize for iOS compatibility after the iframe loads
+    // Set a fixed height contentSize attribute for iOS
     iframe.onload = function() {
       try {
-        const contentHeight = iframe.contentWindow.document.body.scrollHeight || 800;
-        iframe.style.height = contentHeight + 'px';
-        document.getElementById("outerContainer").style.height = contentHeight + 'px';
-
-        // Setting a contentSize attribute for iOS detection
-        iframe.contentWindow.document.body.setAttribute('contentSize', contentHeight + 'px');
+        iframe.contentWindow.document.body.setAttribute('contentSize', '800px');
       } catch (e) {
-        console.log("Could not access iframe content, using default height.");
+        console.log("Could not set contentSize; using fixed 800px height.");
       }
     };
   } else {
