--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <style>
     /* Fixed height container */
     .iframe-container {
-      -webkit-overflow-scrolling: touch;
+      /* -webkit-overflow-scrolling: touch; */
       width: 360px;
       height: 800px; /* Enforcing fixed 800px height */
       overflow: hidden;
+      background:#00f;
+      position:fixed;
+      top:0;
+      left:0;
     }
     /* Fixed height iframe */
     .iframe-container iframe {
