--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fixed Height Iframe with contentSize</title>
+  <title>Fixed Square Iframe</title>
   <style>
-    .iframe-container {
-      -webkit-overflow-scrolling: touch;
-      width: 360px;
-      height: 800px; /* Fixed height */
+    /* Outer fixed square container */
+    .square-container {
+      width: 800px;
+      height: 800px; /* Fixed square dimensions */
+      display: flex;
+      align-items: center;
+      justify-content: center;
       overflow: hidden;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      background-color: red;
     }
-    .iframe-container iframe {
+
+    /* Inner iframe set to fill the square */
+    .square-container iframe {
       width: 100%;
-      height: 100%; /* Matches container height */
+      height: 100%;
       border: none;
-      overflow: hidden;
     }
   </style>
 </head>
 <body>
 
-<div class="iframe-container" id="outerContainer" contentSize="800px">
+<div class="square-container">
   <iframe id="dynamicIframe" scrolling="no" allowtransparency="true"></iframe>
 </div>
 
@@ -35,7 +42,7 @@
   const iframe = document.getElementById('dynamicIframe');
   const iframeSrc = getIframeSrc();
 
-  // Set iframe source to the specified URL with fixed 800px height
+  // Set iframe source if the URL is provided
   if (iframeSrc) {
     iframe.src = iframeSrc;
   } else {
