--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <style>
     /* Outer fixed square container */
     .square-container {
-      width: 800px;
+      width: 100%;
       height: 800px; /* Fixed square dimensions */
       display: flex;
       align-items: center;
       justify-content: center;
       overflow: hidden;
-      border: 1px solid #ccc;
       box-sizing: border-box;
       background-color: red;
     }
@@ -21,7 +20,7 @@
     /* Inner iframe set to fill the square */
     .square-container iframe {
       width: 100%;
-      height: 100%;
+      height: 800;
       border: none;
     }
   </style>
