--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
       width: 800px;
       height: 800px; /* Fixed square dimensions */
       display: flex;
-      align-items: center;
-      justify-content: center;
       overflow: hidden;
       border: 1px solid #ccc;
       box-sizing: border-box;
@@ -20,7 +18,7 @@
     /* Inner iframe styling to fill the square */
     iframe {
       width: 100%;
-      height: 100%;
+      height: 800;
       border: none;
     }
   </style>
