--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>iOS iFrame Fixed Height</title>
+  <title>iOS iFrame Dynamic Height Adjustment</title>
   <style>
     .iframe-container {
       -webkit-overflow-scrolling: touch;
@@ -12,7 +12,6 @@
     }
     iframe {
       width: 100%;
-      height: 800px; /* Set fixed height */
       border: none;
       overflow: hidden;
     }
@@ -32,10 +31,12 @@
       const iframe = document.getElementById('dynamicIframe');
       iframe.src = iframeUrl;
 
-      // Set height to 800px on load as a fixed value
-      iframe.onload = function() {
-        iframe.style.height = '800px';
-      };
+      // Listen for height messages from the iframe
+      window.addEventListener("message", function(event) {
+        if (event.data && event.data.height) {
+          iframe.style.height = event.data.height + 'px';
+        }
+      }, false);
     } else {
       document.body.innerHTML = "<p>Error: No iframe URL provided.</p>";
     }
