--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     .iframe-container {
       -webkit-overflow-scrolling: touch;
       width: 360px;
+      height: 800px;
       overflow: auto;
     }
     iframe {
