--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="iframe-container">
-    <iframe id="dynamicIframe" allowtransparency="true" scrolling="yes" src="https://ehub.htvapps.com/kcci/wp-json/election-hub/v1/iframe-embed/373"></iframe>
+    <iframe id="dynamicIframe" allowtransparency="true" scrolling="no" src="https://ehub.htvapps.com/kcci/wp-json/election-hub/v1/iframe-embed/373"></iframe>
   </div>
 </body>
 </html>
