--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
     }
   </style>
   <div class="iframe-container">
-    <iframe id="dynamicIframe" allowtransparency="true" scrolling="no" src="https://ehub.htvapps.com/kcci/wp-json/election-hub/v1/iframe-embed/373" onload="this.style.height = '800px'"></iframe>
+    <!-- <iframe id="dynamicIframe" allowtransparency="true" scrolling="no" src="https://ehub.htvapps.com/kcci/wp-json/election-hub/v1/iframe-embed/373" onload="this.style.height = '800px'"></iframe> -->
   </div>
