--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <style>
     .iframe-container {
-      -webkit-overflow-scrolling: touch;
-      width: 360px;
-      height: 800px; /* Set a fixed height */
-      overflow: auto;
-    }
-    iframe {
+      /* -webkit-overflow-scrolling: touch; */
       width: 100%;
       height: 800px; /* Set a fixed height */
+      /* overflow: auto; */
+    }
+    /* iframe {
+      width: 100%;
+      height: 800px;
       border: none;
       overflow: hidden;
-    }
+    } */
   </style>
   <div class="iframe-container">
     <!-- <iframe id="dynamicIframe" allowtransparency="true" scrolling="no" src="https://ehub.htvapps.com/kcci/wp-json/election-hub/v1/iframe-embed/373" onload="this.style.height = '800px'"></iframe> -->
