--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     .iframe-container {
       /* -webkit-overflow-scrolling: touch; */
       width: 100%;
+      background-color: red;
       height: 800px; /* Set a fixed height */
       /* overflow: auto; */
     }
